feat collection-server 增加长轮询接口
